name:                aoc
version:             0.1.0.0
synopsis:            Advent of Code
description:         Solutions to Advent of Code problems
homepage:            https://github.com/satyenr/aoc
license:             MIT
license-file:        LICENSE
author:              Satyen Rai
copyright:           Satyen Rai
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

---------------------------------------
executable aoc-hs
  hs-source-dirs:      src
  main-is:             cli.hs
  default-language:    Haskell2010
  build-depends:
      base
    , optparse-applicative
    , terminal-size
  ghc-options:         -Wall

----------------------------------------
executable day01
  hs-source-dirs:      src/2017/haskell
  main-is:             day01.hs
  default-language:    Haskell2010
  build-depends:       base
  ghc-options:         -Wall

----------------------------------------
executable day02
  hs-source-dirs:      src/2017/haskell
  main-is:             day02.hs
  default-language:    Haskell2010
  build-depends:       base
  ghc-options:         -Wall

----------------------------------------
executable day04
  hs-source-dirs:      src/2017/haskell
  main-is:             day04.hs
  default-language:    Haskell2010
  build-depends:       base
  ghc-options:         -Wall

----------------------------------------
executable day05
  hs-source-dirs:      src/2017/haskell
  main-is:             day05.hs
  default-language:    Haskell2010
  build-depends:       base
  ghc-options:         -Wall

----------------------------------------
executable day09
  hs-source-dirs:      src/2017/haskell
  main-is:             day09.hs
  default-language:    Haskell2010
  build-depends:       base
  ghc-options:         -Wall

----------------------------------------
executable day10
  hs-source-dirs:      src/2017/haskell
  main-is:             day10.hs
  default-language:    Haskell2010
  build-depends:       base, split, MissingH
  ghc-options:         -Wall
