name:                aoc
version:             0.1.0.0
synopsis:            Advent of Code
description:         Solutions to Advent of Code problems
homepage:            https://github.com/satyenr/aoc
license:             MIT
license-file:        LICENSE
author:              Satyen Rai
copyright:           Satyen Rai
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

---------------------------------------
executable aoc-hs
  hs-source-dirs:      src
  main-is:             cli.hs
  other-modules:
      AOC.Utils
    , AOC.Y2017
    , AOC.Y2017.Day01
    , AOC.Y2017.Day02
    , AOC.Y2017.Day04
    , AOC.Y2017.Day05
    , AOC.Y2017.Day06
    , AOC.Y2017.Day09
    , AOC.Y2017.Day10
  default-language:    Haskell2010
  build-depends:
      base
    , clock
    , containers
    , formatting
    , MissingH
    , optparse-applicative
    , split
    , terminal-size
    , text
  ghc-options:         -Wall
  other-extensions:    OverloadedStrings
